<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SqliteDatabaseDemo</string>
    <string name="navigation_drawer_open" tools:keep="@string/navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close" tools:keep="@string/navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="insert">Insert</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="result">Result</string>
</resources>
